Revision history for Mojo-IRC

0.08
       * Will also emit numeric events

0.07     Fri May 30 07:46:58 2014
       * Fix Mojo::IRC for Mojolicious 5.0

0.0601   Sat Feb 22 17:43:57 2014
       * Fix missing ERR_ events.
       * Started DEPRECATION process for irc_err_xxx events.

0.06     Sat Feb 22 11:54:38 2014
       * Allow offline mode with MOJO_IRC_OFFLINE=1

0.0501   Sat Feb 22 09:57:25 2014
       * Add debug info to figure out failing error.t
         http://www.cpantesters.org/cpan/report/3758769c-6bf4-1014-9dd5-8faa6c3f6a79

0.05     Fri Feb 21 20:52:39 2014
       * Add parser() attribute
       * Add ctcp() method to quote CTCP messages
       * Add support for CTCP events

0.04     Fri Feb 21 18:23:16 2014
       * Fix PASS need to be sent before NICK and USER
         http://www.irchelp.org/irchelp/rfc/chapter4.html#c4_1_1
         Contributor: Stephan Jauernick

0.0303   Tue Oct  1 12:23:30 2013
       * Fix irc_err_nicknameinuse: Need to try with same nick, not modify
         the nick attribute.
       * Marked change_nick() as deprecated.

0.0302   Fri Sep  6 23:40:46 2013
       * Fix t/error.t on windows
       * Fix Makefile.PL

0.0301   Wed Sep  4 23:46:41 2013
       * Need to remove stream_id on error as well

0.03     Wed Sep  4 13:48:26 2013
       * Add support for TLS
       * Change default ping interval to every 60 seconds

0.0201   Fri Aug 16 23:31:03 2013
       * Fix NAME in Makefile.PL

0.02     Mon Aug  5 12:40:20 2013
       * Remove File::Slurp as a dependency
       * Remove Carp as a dependency
       * Add Test::more as a dependency
       * Made unittest more robust. The write() of NICK, USER and JOIN
         might be received at the server at once.

0.01     Sat Aug  3 10:19:28 2013
       * Add default event handlers
       * Add change_nick()
       * Add reconnect when changing server.